fix toolbar when too close to the right edge

--- a/src/style/_common.scss
+++ b/src/style/_common.scss
@@ -238,6 +238,7 @@ $sidebar-size: 320px;
 }
 
 .editor-floating-toolbox {
+    display: table;
     position: absolute;
     top: 1rem;
     left: 1rem;
